# cortex-m_atomics

./: CMakeLists.txt  README.md  build.mk
src/: atomic.cpp
